Update Extração base invocador

--- a/SQSR_Base_Invocador_optimized.ipynb
+++ b/SQSR_Base_Invocador_optimized.ipynb
@@ -2,126 +2,218 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving PUUID...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching PUUID: 100%|██████████| 1/1 [00:01<00:00,  1.27s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PUUID retrieved successfully.\n",
+      "Retrieving match IDs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching match IDs: 100%|██████████| 1/1 [00:01<00:00,  1.04s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving match IDs to database...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving match IDs: 100%|██████████| 1/1 [00:00<00:00,  3.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match IDs saved to database.\n",
+      "Retrieving match details for the last 20 ranked games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing match IDs:  67%|██████▋   | 26/39 [00:42<00:21,  1.64s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing and saving match details...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving match details to database: 100%|██████████| 1/1 [00:07<00:00,  7.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match details saved successfully.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
     "import requests\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from dotenv import load_dotenv\n",
-    "from ratelimit import limits, sleep_and_retry\n",
-    "from requests.exceptions import HTTPError, Timeout, RequestException\n",
-    "from urllib.parse import quote\n",
     "from tqdm import tqdm\n",
-    "import asyncio\n",
-    "import aiohttp\n",
+    "import time\n",
+    "import urllib.parse\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from requests.exceptions import HTTPError, Timeout, RequestException\n",
+    "from ratelimit import limits, sleep_and_retry\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
-    "API_KEY = os.getenv('api')\n",
+    "api = os.getenv('api')\n",
     "\n",
     "# Database connection\n",
     "engine = create_engine('mssql+pyodbc://Revision-PC\\\\SQLEXPRESS/RiotDataDB?driver=ODBC+Driver+17+for+SQL+Server')\n",
     "\n",
-    "# Rate limit parameters\n",
-    "RATE_LIMIT = 100  # 100 requests per minute\n",
-    "TIME_WINDOW = 60  # 60 seconds\n",
+    "# Rate limiting (100 requests per 2 minutes)\n",
+    "CALLS = 100\n",
+    "TIME_PERIOD = 120  # 120 seconds\n",
     "\n",
-    "# Decorator to handle rate limiting\n",
+    "# Decorator to apply rate limiting\n",
     "@sleep_and_retry\n",
-    "@limits(calls=RATE_LIMIT, period=TIME_WINDOW)\n",
+    "@limits(calls=CALLS, period=TIME_PERIOD)\n",
     "def call_api(url):\n",
-    "    response = requests.get(url)\n",
-    "    response.raise_for_status()\n",
-    "    return response\n",
-    "\n",
-    "# Function to retrieve summoner's PUUID\n",
-    "def get_puuid(summoner_name, summoner_tag):\n",
-    "    encoded_name = quote(summoner_name)\n",
-    "    api_url = f\"https://americas.api.riotgames.com/riot/account/v1/accounts/by-riot-id/{encoded_name}/{summoner_tag}?api_key={API_KEY}\"\n",
+    "    \"\"\"Calls the Riot API with the given URL and handles errors.\"\"\"\n",
     "    try:\n",
-    "        response = call_api(api_url)\n",
-    "        return response.json().get('puuid')\n",
-    "    except HTTPError as http_err:\n",
-    "        print(f\"HTTP error occurred: {http_err}\")\n",
-    "    except Exception as err:\n",
-    "        print(f\"Other error occurred: {err}\")\n",
-    "\n",
-    "# Function to retrieve match IDs\n",
-    "def get_match_ids(puuid):\n",
-    "    api_url = f\"https://americas.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids?start=0&count=100&api_key={API_KEY}\"\n",
-    "    try:\n",
-    "        response = call_api(api_url)\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Raise an error for bad status codes (4xx, 5xx)\n",
     "        return response.json()\n",
     "    except HTTPError as http_err:\n",
     "        print(f\"HTTP error occurred: {http_err}\")\n",
-    "    except Exception as err:\n",
-    "        print(f\"Other error occurred: {err}\")\n",
+    "    except Timeout as timeout_err:\n",
+    "        print(f\"Timeout error occurred: {timeout_err}\")\n",
+    "    except RequestException as req_err:\n",
+    "        print(f\"Other request error occurred: {req_err}\")\n",
+    "    return None\n",
     "\n",
-    "# Asynchronous function to retrieve match details\n",
-    "async def fetch_match_detail(session, match_id):\n",
-    "    api_url = f\"https://americas.api.riotgames.com/lol/match/v5/matches/{match_id}?api_key={API_KEY}\"\n",
-    "    try:\n",
-    "        async with session.get(api_url) as response:\n",
-    "            response.raise_for_status()\n",
-    "            return await response.json(), match_id\n",
-    "    except HTTPError as http_err:\n",
-    "        print(f\"HTTP error occurred: {http_err}\")\n",
-    "    except Exception as err:\n",
-    "        print(f\"Other error occurred: {err}\")\n",
-    "    return None, match_id\n",
+    "def get_puuid(nome_invocador, tag_invocador):\n",
+    "    \"\"\"Fetches the PUUID of the summoner based on their summoner name and tag.\"\"\"\n",
+    "    encoded_name = urllib.parse.quote(nome_invocador)\n",
+    "    api_invocador = f\"https://americas.api.riotgames.com/riot/account/v1/accounts/by-riot-id/{encoded_name}/{tag_invocador}?api_key={api}\"\n",
+    "    return call_api(api_invocador).get('puuid')\n",
     "\n",
-    "async def fetch_all_match_details(match_ids):\n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        tasks = [fetch_match_detail(session, match_id) for match_id in match_ids]\n",
-    "        return await asyncio.gather(*tasks)\n",
+    "def get_match_ids(puuid_invocador):\n",
+    "    \"\"\"Retrieves the last 100 match IDs for a given PUUID.\"\"\"\n",
+    "    api_partidas = f\"https://americas.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid_invocador}/ids?start=0&count=100&api_key={api}\"\n",
+    "    return call_api(api_partidas)\n",
     "\n",
-    "def process_match_details(matches_details):\n",
-    "    details_match = []\n",
-    "    for match_detail, match_id in tqdm(matches_details, desc=\"Processing match details\"):\n",
-    "        if match_detail:\n",
-    "            queue_id = match_detail.get('info', {}).get('queueId')\n",
-    "            if queue_id == 420:  # Only consider ranked solo queue\n",
+    "def fetch_match_details(match_id):\n",
+    "    \"\"\"Fetches match details for a specific match ID.\"\"\"\n",
+    "    api_match_details = f\"https://americas.api.riotgames.com/lol/match/v5/matches/{match_id}?api_key={api}\"\n",
+    "    return call_api(api_match_details)\n",
+    "\n",
+    "def main():\n",
+    "    # Extract the summoner's PUUID\n",
+    "    nome_invocador = input(\"Escreva o nome do invocador: \")\n",
+    "    tag_invocador = input(\"Digite a tag do invocador: \")\n",
+    "\n",
+    "    print(\"Retrieving PUUID...\")\n",
+    "    with tqdm(total=1, desc=\"Fetching PUUID\") as pbar:\n",
+    "        puuid_invocador = get_puuid(nome_invocador, tag_invocador)\n",
+    "        pbar.update(1)\n",
+    "\n",
+    "    if puuid_invocador:\n",
+    "        print(\"PUUID retrieved successfully.\")\n",
+    "        \n",
+    "        # Extract the last 100 match IDs\n",
+    "        print(\"Retrieving match IDs...\")\n",
+    "        match_ids = []\n",
+    "        with tqdm(total=1, desc=\"Fetching match IDs\") as pbar:\n",
+    "            match_ids = get_match_ids(puuid_invocador)\n",
+    "            pbar.update(1)\n",
+    "\n",
+    "        if match_ids:\n",
+    "            print(\"Saving match IDs to database...\")\n",
+    "            with tqdm(total=1, desc=\"Saving match IDs\") as pbar:\n",
+    "                df_match_id = pd.DataFrame(match_ids, columns=['Match_ID'])\n",
+    "                df_match_id.to_sql('MatchID_Invocador', con=engine, if_exists='replace', index=False)\n",
+    "                pbar.update(1)\n",
+    "            print(\"Match IDs saved to database.\")\n",
+    "        else:\n",
+    "            print(\"No match IDs retrieved.\")\n",
+    "            return\n",
+    "\n",
+    "        # Retrieve match details for the match IDs and filter for the last 20 ranked games (queueId == 420)\n",
+    "        print(\"Retrieving match details for the last 20 ranked games...\")\n",
+    "        details_match = []\n",
+    "        ranked_games_collected = 0  # Counter to stop at 20 ranked games\n",
+    "\n",
+    "        for match_id in tqdm(match_ids, desc=\"Processing match IDs\"):\n",
+    "            if ranked_games_collected >= 20:\n",
+    "                break  # Stop once we have 20 ranked games\n",
+    "\n",
+    "            match_detail = fetch_match_details(match_id)\n",
+    "            if match_detail:\n",
+    "                queue_id = match_detail.get('info', {}).get('queueId')\n",
     "                participants = match_detail.get('info', {}).get('participants', [])\n",
     "                participants_df = pd.json_normalize(participants)\n",
     "                participants_df.insert(0, 'Match_ID', match_id)\n",
-    "                details_match.append(participants_df)\n",
-    "    return pd.concat(details_match, ignore_index=True) if details_match else pd.DataFrame()\n",
     "\n",
-    "def main():\n",
-    "    # Get summoner details\n",
-    "    summoner_name = input(\"Escreva o nome do invocador: \")\n",
-    "    summoner_tag = input(\"Digite a tag do invocador: \")\n",
-    "    \n",
-    "    print(\"Retrieving PUUID...\")\n",
-    "    puuid = get_puuid(summoner_name, summoner_tag)\n",
+    "                if queue_id == 420:  # Only ranked solo queue\n",
+    "                    details_match.append(participants_df)\n",
+    "                    ranked_games_collected += 1  # Increment the counter\n",
     "\n",
-    "    if puuid:\n",
-    "        print(\"Retrieving match IDs...\")\n",
-    "        match_ids = get_match_ids(puuid)\n",
-    "        if match_ids:\n",
-    "            print(\"Saving match IDs to database...\")\n",
-    "            df_match_id = pd.DataFrame(match_ids, columns=['Match_ID'])\n",
-    "            df_match_id.to_sql('MatchID_Invocador', con=engine, if_exists='replace', index=False)\n",
+    "            time.sleep(0.5)  # Respect API request limit\n",
     "\n",
-    "            # Fetch match details asynchronously with progress bar\n",
-    "            print(\"Fetching match details...\")\n",
-    "            match_details = asyncio.run(fetch_all_match_details(tqdm(match_ids, desc=\"Fetching match details\")))\n",
-    "\n",
-    "            # Process and save match details\n",
-    "            print(\"Processing and saving match details...\")\n",
-    "            df_matchdetails = process_match_details(match_details)\n",
-    "            if not df_matchdetails.empty:\n",
+    "        # Concatenate and save match details to the database\n",
+    "        print(\"Processing and saving match details...\")\n",
+    "        if details_match:\n",
+    "            with tqdm(total=1, desc=\"Saving match details to database\") as pbar:\n",
+    "                df_matchdetails = pd.concat(details_match, ignore_index=True)\n",
     "                df_matchdetails.to_sql('Detalhes_Liga_Invocador', con=engine, if_exists='replace', index=False)\n",
-    "                print(\"Match details saved successfully.\")\n",
-    "            else:\n",
-    "                print(\"No valid match details found.\")\n",
+    "                pbar.update(1)\n",
+    "            print(\"Match details saved successfully.\")\n",
     "        else:\n",
-    "            print(\"No match IDs retrieved.\")\n",
+    "            print(\"No valid match details found.\")\n",
+    "\n",
     "    else:\n",
-    "        print(\"Failed to retrieve PUUID.\")\n",
+    "        print(\"Failed to retrieve PUUID for the summoner.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
