--- a/5_SQSR_Top3champions_Summoner.ipynb
+++ b/5_SQSR_Top3champions_Summoner.ipynb
@@ -9,11 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Database connection successful.\n",
       "\n",
       "Top 3 Most Played Champions with Stats:\n",
       "  Champion  Games Played   KDA  Win Rate (%)  CS/Min\n",
-      "0     Sett            15  2.16         46.67    5.54\n",
-      "1    Amumu             5  2.62         60.00    0.69\n"
+      "0     Sett            19  2.23         47.37    5.62\n",
+      "1    Nasus             1  2.50        100.00    5.18\n"
      ]
     }
    ],
@@ -22,6 +23,7 @@
     "from sqlalchemy import create_engine\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import urllib.parse\n",
     "\n",
     "# Load environment variables from a .env file\n",
     "load_dotenv()\n",
@@ -37,6 +39,9 @@
     "if not password:\n",
     "    raise ValueError(\"Database password not found. Please set the DB_PASSWORD environment variable.\")\n",
     "\n",
+    "# URL-encode the password if it contains special characters\n",
+    "password = urllib.parse.quote_plus(password)\n",
+    "\n",
     "# Construct the database connection string\n",
     "connection_url = (\n",
     "    f\"mssql+pyodbc://{username}:{password}@{server}:{port}/{database}\"\n",
@@ -45,8 +50,16 @@
     "    \"&TrustServerCertificate=yes\"\n",
     ")\n",
     "\n",
-    "# Create the SQLAlchemy engine\n",
-    "engine = create_engine(connection_url)\n",
+    "try:\n",
+    "    # Create the SQLAlchemy engine\n",
+    "    engine = create_engine(connection_url, connect_args={\"timeout\": 30})\n",
+    "    # Test the connection\n",
+    "    with engine.connect() as connection:\n",
+    "        print(\"Database connection successful.\")\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to connect to the database.\")\n",
+    "    print(str(e))\n",
+    "    exit(1)\n",
     "\n",
     "# Function to retrieve the 3 most played champions\n",
     "def get_most_played_champions(summoner_name):\n",
@@ -83,20 +96,24 @@
     "        # Fetch data for each champion\n",
     "        df_stats = pd.read_sql_query(query, engine)\n",
     "        \n",
+    "        if df_stats.empty:\n",
+    "            print(f\"No data found for champion: {champion}\")\n",
+    "            continue\n",
+    "        \n",
     "        # Calculate KDA\n",
-    "        kills = df_stats['total_kills'].iloc[0]\n",
-    "        deaths = df_stats['total_deaths'].iloc[0]\n",
-    "        assists = df_stats['total_assists'].iloc[0]\n",
+    "        kills = df_stats['total_kills'].iloc[0] or 0\n",
+    "        deaths = df_stats['total_deaths'].iloc[0] or 0\n",
+    "        assists = df_stats['total_assists'].iloc[0] or 0\n",
     "        kda = (kills + assists) / (deaths if deaths > 0 else 1)\n",
     "        \n",
     "        # Calculate win rate\n",
-    "        total_games = df_stats['total_games'].iloc[0]\n",
-    "        wins = df_stats['wins'].iloc[0]\n",
+    "        total_games = df_stats['total_games'].iloc[0] or 0\n",
+    "        wins = df_stats['wins'].iloc[0] or 0\n",
     "        win_rate = (wins / total_games) * 100 if total_games > 0 else 0\n",
     "        \n",
     "        # Calculate CS/min\n",
-    "        total_cs = df_stats['total_cs'].iloc[0]\n",
-    "        total_time_played = df_stats['total_time_played'].iloc[0]\n",
+    "        total_cs = df_stats['total_cs'].iloc[0] or 0\n",
+    "        total_time_played = df_stats['total_time_played'].iloc[0] or 0\n",
     "        cs_per_min = total_cs / (total_time_played / 60) if total_time_played > 0 else 0\n",
     "        \n",
     "        # Append stats to the list\n",
@@ -117,6 +134,10 @@
     "\n",
     "    # Retrieve the 3 most played champions\n",
     "    df_most_played_champions = get_most_played_champions(summoner_name)\n",
+    "    \n",
+    "    if df_most_played_champions.empty:\n",
+    "        print(\"No champions found for the given summoner.\")\n",
+    "        exit(0)\n",
     "    \n",
     "    # Calculate KDA, Winrate, CS/min, and games played for the top 3 champions\n",
     "    champion_stats = calculate_champion_stats(summoner_name, df_most_played_champions)\n",
