--- a/1_SQSR_Base_Invocador_optimized.ipynb
+++ b/1_SQSR_Base_Invocador_optimized.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching PUUID: 100%|██████████| 1/1 [00:01<00:00,  1.42s/it]\n"
+      "Fetching PUUID: 100%|██████████| 1/1 [00:01<00:00,  1.08s/it]\n"
      ]
     },
     {
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching match IDs: 100%|██████████| 1/1 [00:01<00:00,  1.10s/it]\n"
+      "Fetching match IDs: 100%|██████████| 1/1 [00:00<00:00,  1.02it/s]\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving match IDs: 100%|██████████| 1/1 [00:01<00:00,  1.89s/it]\n"
+      "Saving match IDs: 100%|██████████| 1/1 [00:02<00:00,  2.30s/it]\n"
      ]
     },
     {
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing match IDs:  34%|███▍      | 20/59 [00:32<01:03,  1.63s/it]\n"
+      "Processing match IDs:  24%|██▎       | 20/85 [00:31<01:41,  1.55s/it]\n"
      ]
     },
     {
@@ -74,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving match details to database: 100%|██████████| 1/1 [00:06<00:00,  6.72s/it]"
+      "Saving match details to database: 100%|██████████| 1/1 [00:06<00:00,  6.37s/it]"
      ]
     },
     {
